Init basic template

--- a/index.html
+++ b/index.html
@@ -1,1 +1,211 @@
-Placeholder
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>COS 436 Final Presentations</title>
+    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans">
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto+Mono">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  </head>
+  <body>
+
+	<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+		<div class="container">
+		<a class="navbar-brand" href="#">COS 436 Fall 2023</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+		  <ul class="navbar-nav">
+			<li class="nav-item"><a class="nav-link" href="#summaryreport">Report</a></li>
+			<li class="nav-item"><a class="nav-link" href="#summaryvideo">Video</a></li>
+			<!-- <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li> -->
+			<li class="nav-item"><a class="nav-link" href="#systemprojects">System Projects</a></li>
+			<li class="nav-item"><a class="nav-link" href="#studyprojects">Study Projects</a></li>
+		  </ul>
+		</div>
+	</div>
+	</nav>
+
+    <div class="main-content container">
+    	<div id="home">
+			<h1>COS 436 Human-Computer Interaction</h1>
+			<h2>Final Projects</h2>
+			<h2>Fall 2023</h2>
+			<h2>Princeton University</h2>
+			<br>
+		</div>
+
+		<section id="summaryreport" class="notdone">
+			<h2>Summary Report</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci porta non pulvinar neque laoreet. Sit amet venenatis urna cursus eget nunc scelerisque viverra. Bibendum ut tristique et egestas quis. Velit dignissim sodales ut eu sem integer vitae justo eget. Risus at ultrices mi tempus imperdiet nulla malesuada. Volutpat maecenas volutpat blandit aliquam etiam. Ipsum dolor sit amet consectetur adipiscing. Aliquam ultrices sagittis orci a. Congue quisque egestas diam in. Urna duis convallis convallis tellus id. Volutpat diam ut venenatis tellus. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque dignissim. </p>
+			<p>Leo urna molestie at elementum eu. Proin nibh nisl condimentum id venenatis. Convallis a cras semper auctor. Purus viverra accumsan in nisl. Pretium fusce id velit ut tortor. Varius quam quisque id diam vel quam. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum lectus. Nunc sed blandit libero volutpat sed cras ornare arcu. Tristique sollicitudin nibh sit amet commodo nulla facilisi. In egestas erat imperdiet sed euismod nisi porta lorem mollis. Hendrerit dolor magna eget est lorem ipsum dolor sit. Orci ac auctor augue mauris augue. </p>
+			<img alt="photo from Project Fair Round II." src="https://www.collegeart.org/images/conference/CAA-2020_Thurs-Feb-13_001_book&trade,crowdedaisle.jpg">
+			<div class="collage-image-caption">Photo from Project Fair Round II caption</div>
+		</section>
+
+		<section id="summaryvideo" class="notdone">
+			<h2>Summary Video</h2>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/1iimVd-2Fx8?si=CUDG2cRdDqQcRg9C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		</section>
+	
+		<div id="projects">
+			<section id="systemprojects" class="notdone">
+			<h2>System Implementation Projects</h2>
+				<div class="row">
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 1</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="collage-image-container"><img src="https://www.princeton.edu//sites/default/files/images/2017/06/20060425_NassauHall_JJ_IMG_5973.jpg"></div>
+						<div class="collage-image-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 2</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 3</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 4</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 5</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 6</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 7</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 8</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="studyprojects" class="notdone">
+			<h2>Study Projects</h2>
+				<div class="row">
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 9</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 10</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 11</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">Kuba, Tolu, Seanna, Yuhan</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 12</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 13</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 14</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 15</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
+						<div class="project-card">
+						<div class="group-name">Team 16</div>
+						<div class="project-name">Implementation of large-scale models</div>
+						<div class="project-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius vel pharetra vel turpis nunc eget lorem. Senectus et netus et malesuada.</div>
+						<div class="team-members">First1 Last1, First2 Last2, First3 Last3, First 4 Last4</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
+
+    </div>
+  </body>
+</html>
