--- a/index.html
+++ b/index.html
@@ -51,13 +51,16 @@
 			<h2>Summary Report</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci porta non pulvinar neque laoreet. Sit amet venenatis urna cursus eget nunc scelerisque viverra. Bibendum ut tristique et egestas quis. Velit dignissim sodales ut eu sem integer vitae justo eget. Risus at ultrices mi tempus imperdiet nulla malesuada. Volutpat maecenas volutpat blandit aliquam etiam. Ipsum dolor sit amet consectetur adipiscing. Aliquam ultrices sagittis orci a. Congue quisque egestas diam in. Urna duis convallis convallis tellus id. Volutpat diam ut venenatis tellus. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque dignissim. </p>
 			<p>Leo urna molestie at elementum eu. Proin nibh nisl condimentum id venenatis. Convallis a cras semper auctor. Purus viverra accumsan in nisl. Pretium fusce id velit ut tortor. Varius quam quisque id diam vel quam. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum lectus. Nunc sed blandit libero volutpat sed cras ornare arcu. Tristique sollicitudin nibh sit amet commodo nulla facilisi. In egestas erat imperdiet sed euismod nisi porta lorem mollis. Hendrerit dolor magna eget est lorem ipsum dolor sit. Orci ac auctor augue mauris augue. </p>
-			<img alt="photo from Project Fair Round II." src="https://www.collegeart.org/images/conference/CAA-2020_Thurs-Feb-13_001_book&trade,crowdedaisle.jpg">
-			<div class="collage-image-caption">Photo from Project Fair Round II caption</div>
+			<div class="collage-image-container">
+				<img alt="photo from Project Fair Round II." src="https://www.collegeart.org/images/conference/CAA-2020_Thurs-Feb-13_001_book&trade,crowdedaisle.jpg">
+				<div class="collage-image-caption">Photo from Project Fair Round II caption</div>
+			</div>
 		</section>
 
 		<section id="summaryvideo" class="notdone">
 			<h2>Summary Video</h2>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/1iimVd-2Fx8?si=CUDG2cRdDqQcRg9C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			<div class="center"><iframe 
+				width="560" height="315" src="https://www.youtube.com/embed/1iimVd-2Fx8?si=CUDG2cRdDqQcRg9C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 		</section>
 	
 		<div id="projects">
