--- a/index.html
+++ b/index.html
@@ -62,90 +62,98 @@
 				<p>The 16 projects covered a wide variety of subfields within HCI, from exploring how people interact with AI such as  ChatGPT and Dall-E, to building systems to help with mental health or leveraging AR for improving education. Here is a summary of the HCI Projects of 2023:</p>
 				<ol>
 					<li>
-						<p class="articlesubtitle">How do conversational UIs compare to textual prompts for AI image generation? </p>
+						<h3 class="articlesubtitle">How do conversational UIs compare to textual prompts for AI image generation? </h3>
 						<p class="articleauthor">Henry Knoll, Ava Crnkovic-Rubsamen, Mike Scornavacca, and Pierce Maloney</p>
 						<p>This project investigated whether single-prompt or conversational approaches to prompting image generation were more desirable to users. The group found that most users preferred a more conversational approach to image generation.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">BÆ-I</p>
+						<h3 class="articlesubtitle">BÆ-I</h3>
 						<p class="articleauthor">Alison Lee, Ambri Ma, Christine Sun, Harvey Wang</p>
 						<p>This project tested how AI-generated prompts could solve the problem of remote socialization. The system, BÆ-I, allows partners to ask each other questions, then choose between their partner’s and two AI-generated responses. Couples reported increases in quality of communication and some other relationship metrics after playing.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">What do student artists think of AI?</p>
+						<h3 class="articlesubtitle">What do student artists think of AI?</h3>
 						<p class="articleauthor">Kellen Cao and Rhim Andemichael</p>
 						<p>This project investigated the attitudes of student artists at Princeton with regards to AI-generated art, along with their ability to distinguish human-generated art from AI-generated art. They found mixed attitudes from excitement to disillusionment. They also found that AI-generated art with human elements was more likely to fool student artists.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">ChatGPT in CS education</p>
+						<h3 class="articlesubtitle">ChatGPT in CS education</h3>
 						<p class="articleauthor">Ariana Lujan, Joy Patterson, Divraj Singh, Alexis Wu</p>
 						<p>This group asked a wide range of educators on their views on the use of ChatGPT in CS education. They asked about problems including LLM hallucination, attribution of generated code, and the relation of LLMs to critical thinking skills. Educators surveyed were more likely than not to incorporate LLMs into course policies or within the classroom, but were often concerned about their long-term impacts.</p>
 					</li>
 					<!-- <span><li></li></span> -->
 					<li value="6">
-						<p class="articlesubtitle">Exploring the visuo-vibrotactile modality for real-time low-friction feedback in the classroom</p>
+						<h3 class="articlesubtitle">Exploring the visuo-vibrotactile modality for real-time low-friction feedback in the classroom</h3>
 						<p class="articleauthor">Oleg Golev, Michelle Huang, Chanketya Nop, Kritin Vongthongsri</p>
 						<p>Group 6 looked at applying real-time, low-friction feedback to the problem of delayed instructor reactions. They did so by building a system that allowed students to send haptic feedback to instructors’ smart watches based on their current sentiments.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">How well does AI-generated speculative design solve the problem of myopic ethical considerations for emerging technologies?</p>
+						<h3 class="articlesubtitle">How well does AI-generated speculative design solve the problem of myopic ethical considerations for emerging technologies?</h3>
 						<p class="articleauthor">Libo Tan, Andrew Mi, Kok Wei Pua, and Jordan Bowman-Davis</p>
 						<p>This project explored the use of AI generation to prompt participants to explore ethical questions. They built a system where users could ask AI-generated clones of themselves questions, with live feedback. This resulted in users having various conversations, but those generally were not ethical in nature.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">How well do AR visualizations solve the problem of bystander safety, comfort, and trust for virtual mobile robots?</p>
+						<h3 class="articlesubtitle">How well do AR visualizations solve the problem of bystander safety, comfort, and trust for virtual mobile robots?</h3>
 						<p class="articleauthor">Maya Jairam, Advika Srivastava, Ananya Grover, Devansh Sharma</p>
 						<p>Group 8 aimed to investigate the efficacy of AR in allowing users to understand the movements of robots. To do so, they virtually emulated a delivery robot within AR, and used a system of cues in order to allow users to understand its upcoming actions.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">Breaking The Plane</p>
+						<h3 class="articlesubtitle">Breaking The Plane</h3>
 						<p class="articleauthor">Liam Esparraguera, Brian Lou, Kris Selberg, Jenny Sun</p>
 						<p>This group aimed to address the difficulty of understanding higher-dimensional mathematics using AR. To do so, they built a system enabling users to visualize and manipulate three-dimensional equations on a Quest 3, combined with OCR equation input. They found users generally preferred this system to alternatives.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">Lemme See That!: Examining how AI Art impacts engagement with textual posts on X </p>
+						<h3 class="articlesubtitle">Lemme See That!: Examining how AI Art impacts engagement with textual posts on X </h3>
 						<p class="articleauthor">Okezie Eze, Samyukta Neeraj, Meet Patel, Dylan Tran</p>
 						<p>This project leverages X’s unique outreach (and an incredible amount of available data) to explore AI's potential in different social media contexts (such as marketing, advertisement, and research). They used Selenium to scrape data, grab Tweets from the “Latest” section, and then they manually assigned features for the images. They found that there was higher engagement on posts with human generated images, compared to that of posts with no images or AI-generated images.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">How do college students use ChatGPT to learn to code?</p>
+						<h3 class="articlesubtitle">How do college students use ChatGPT to learn to code?</h3>
 						<p class="articleauthor">Kuba Alicki, Tolulope Oshinowo, Yuhan Zheng, Seanna Zhang</p>
 						<p>This project explores how university students have used ChatGPT in the space of learning new programming languages. They conducted a survey interviewed fellow Princeton students, and studied their experience with ChatGPT and its educational potential. Results showed that while almost all participants used ChatGPT to check syntax or generate snippets, new learners/beginners relied on ChatGPT’s output way too heavily, leading to a less effective learning environment.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">How do non-native English speakers use ChatGPT as a tool for writing?</p>
+						<h3 class="articlesubtitle">How do non-native English speakers use ChatGPT as a tool for writing?</h3>
 						<p class="articleauthor">Jasmine Zhang, Desmond Devalu, Theo Knoll, and Emmy Song</p>
 						<p>This project is centered around how ChatGPT can enhance the efficiency and accuracy of writing done by non-native English speakers. The study found that ChatGPT helped participants construct responses significantly more efficiently for long-form responses, but in short-form, such as text messages, the efficiency was actually worse.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">Understanding Visual Artists' Perspectives on Their Use of Generative AI</p>
+						<h3 class="articlesubtitle">Understanding Visual Artists' Perspectives on Their Use of Generative AI</h3>
 						<p class="articleauthor">Genie Choi, Lu Esteban, Kirsten Pardo, Warren Quan</p>
 						<p>This study explores how artists perceive the use of generative AI tools, with a focus on ethical and artistic considerations. Both professional and student artists were interviewed, and their usage of AI was questioned. The results showed quite an interesting division between artists who do not use AI tools at all and others who use it religiously. As expected, these two groups had very different outlooks on AI's ethical and artistic use cases throughout art.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">Understanding College Students’ Opinions on LLM-assisted Mental Health Services</p>
+						<h3 class="articlesubtitle">Understanding College Students’ Opinions on LLM-assisted Mental Health Services</h3>
 						<p class="articleauthor">Owen Zhang, Shuyao Zhou, Jiayi Geng</p>
 						<p>This project explores the potential of Large Language Models (LLMs) in the context of mental health services throughout a college campus. Researchers asked questions regarding possible benefits, concerns, and/or expectations when using applications based on LLM technology for support in mental health. Preliminary research uncovered opinions such that participants expected LLMs to be proactive and general concerns of LLMs variety in training data on mental health.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">Public Perception of Front-Facing Display Headsets</p>
+						<h3 class="articlesubtitle">Public Perception of Front-Facing Display Headsets</h3>
 						<p class="articleauthor">Dariya Brann, Ryan Vuono, Henry Wertz</p>
 						<p>This study focuses on how the public perceives virtual reality headsets that feature front-facing displays. Information was gathered via online surveys and follow-up interviews with volunteering participants, and questions were asked surrounding the naturalness of the conversation and its effect on the conversation’s efficacy. The results revealed widespread hesitation towards such technology and thus suggested that current headsets are not yet suitable for daily use in social interactions.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">RateRight: Reducing Extremity Bias in Online Reviews - A Low-Friction, Time, and Location-Based Approach</p>
+						<h3 class="articlesubtitle">RateRight: Reducing Extremity Bias in Online Reviews - A Low-Friction, Time, and Location-Based Approach</h3>
 						<p class="articleauthor">Arnav Kumar, Darius Jankauskas, Stephen Dong</p>
 						<p>This project proposed an innovative system to produce more authentic and accurate ratings for lectures. It leverages native iOS and Android notifications to allow users to immediately respond to lectures and provide feedback and a rating, and filters based on the users’ locations. The results showed that users were more likely to leave a review and that this greater range of reviews could ideally reduce the extreme nature of online reviews.</p>
 					</li>
 					<li>
-						<p class="articlesubtitle">Evaluating the Effectiveness of Asynchronous Collaboration in Remote Design Environments</p>
+						<h3 class="articlesubtitle">Evaluating the Effectiveness of Asynchronous Collaboration in Remote Design Environments</h3>
 						<p class="articleauthor">Darren Alexis, Jakob Nogler, Ruyu Yan</p>
 						<p>This project focuses on remote collaboration in the context of 3-dimensional designs, as opposed to document collaboration (like Google Docs) or 2D design (such as Figma). The study followed 6 participants with experience in artistic design as they attempted to collaborate on coloring and adjusting a scanned model. The results show that despite some promising applications, the effectiveness of such a tool is limited by the interface and communication between participants.</p>
 					</li>
 				</ol>
 
 				<div class="collage-image-container">
-					<img alt="A collage of images representing the group’s projects. Several images generated using Dall-E." src="img/">
+				<p class="c12"><span
+					style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 296.00px; height: 385.26px;"><img
+						alt="" src="img/collage1.png"
+						style="width: 296.00px; height: 385.26px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+						title=""></span><span
+					style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 293.00px; height: 384.59px;"><img
+						alt="" src="img/collage2.png"
+						style="width: 293.00px; height: 384.59px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+						title=""></span></p>
 					<div class="collage-image-caption">A collage of images representing the group’s projects. Several images generated using Dall-E.</div>
 				</div>
 				<p>	These projects not only pushed the boundaries of HCI but also illuminated the dynamic interplay between humans and technology. From AI's influence on socialization to AR's role in robotics, these projects exemplify the diverse facets of HCI and its multidisciplinary nature. We hope you have been inspired to reflect on how you interact with technology in your day-to-day life, and how systems like these can transform the way you work, learn, or communicate.</p>
