updated video file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>COS 436 Final Presentations</title>
+    <title>COS 436 Final Projects</title>
     <link rel="stylesheet" href="static/style.css">
     <!-- <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto">
@@ -145,11 +145,18 @@
 					</li>
 				</ol> -->
 
-				<div id="summaryvideo" class="notdone" style="padding-top:2rem;">
+				<div id="summaryvideo" style="padding-top:2rem;">
 				<hr>
 					<h3>Summary Video</h3>
-					<div class="center"><iframe 
-						width="560" height="315" src="https://www.youtube.com/embed/1iimVd-2Fx8?si=CUDG2cRdDqQcRg9C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+					<div class="center">
+						<iframe 
+							width="560" height="315" 
+							src="img/HCI.mp4" 
+							title="COS 436 Final Project summary video" frameborder="0" 
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+							allowfullscreen>
+						</iframe>
+					</div>
 				</div>
 				<hr>
 
