--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
 		<div class="container">
 		<a class="navbar-brand" href="#">COS 436 Fall 2023</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
-		</button>
+		</button> -->
 		<div class="collapse navbar-collapse" id="navbarNav">
 		  <ul class="navbar-nav">
 			<li class="nav-item"><a class="nav-link" href="#">Report</a></li>
@@ -56,6 +56,11 @@
 					<img alt="photo from Project Fair Round II." src="img/project-fair-round-ii.png">
 					<div style="margin:auto;" class="collage-image-caption">Photo from Project Fair Round II caption</div>
 				</div>
+				<p class="collage-image-caption" style="font-size:0.75rem;margin:0;">Darius Jankauskas <em>Teams 1-9 Reviewer</em></p>
+				<p class="collage-image-caption" style="font-size:0.75rem;margin:0;">Michael Scornavacca <em>Teams 10-17 Reviewer</em></p>
+				<p class="collage-image-caption" style="font-size:0.75rem;margin:0;">Harvey Wang <em>News Article Author</em></p>
+				<p class="collage-image-caption" style="font-size:0.75rem;margin:0;">Kritin Vongthongsri <em>Video Creator</em></p>
+				<p class="collage-image-caption" style="font-size:0.75rem;margin:0;">Kuba Alicki <em>Site Creator</em></p>
 				<h3 class="articletitle">Presenting 16 Novel Systems and Studies</h3>
 				<p class="articledata">December 7, 2023</p>
 				<p><span class="firstletter">O</span>n a sunny Thursday afternoon, the Friend Center atrium bustled with activity, students gathered around orange tables adorned with presentation slides and exciting projects. It’s November 30th, the day of the final Project Fair for the students enrolled in COS 436: Human-Computer Interaction.</p>
